apps/workloads/tools/iconify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iconify
  labels:
    app: iconify
spec:
  selector:
    matchLabels:
      app: iconify
  template:
    metadata:
      labels:
        app: iconify
        networking/expose-http-api: "true"
    spec:
      containers:
        - name: iconify
          image: iconify/api
          ports:
            - containerPort: 3000
              name: http-api
          livenessProbe:
            httpGet:
              path: /
              port: http-api
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http-api
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
