apps/workloads/tools/iconify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iconify
  labels:
    app: iconify
spec:
  selector:
    app: iconify
  ports:
    - name: http-api
      port: 3000
      protocol: TCP
